# RaspberryPiWebcamSecuOpenCv

./: LICENSE  README.md
camera_daemon/compil/: compilFromWindowsToRaspberry.bat
camera_daemon/ini/: camera_daemon.conf
camera_daemon/init.d/: camera_daemon_init
camera_daemon/src/: CMakeLists.txt
camera_daemon/src/code/: CMakeLists.txt  Main.cpp
camera_daemon/src/lib/: CMakeLists.txt  ConfigDaemon.cpp  Daemonize.cpp  Detection.cpp  Ini.cpp  Utils.cpp
camera_daemon/src/lib/include/: ConfigDaemon.h  Daemonize.h  Detection.h  Utils.h
camera_daemon/vsSln/: readme.txt
camera_daemon/vsSln/Project1/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters
camera_daemon/vsSln/Project1/Debug/CameraDa.D97043D1.tlog/: CameraDaemonVsProject.lastbuildstate
camera_daemon/vsSln/headers/: dirent.h
jpg2video/: README.md
jpg2video/src/: CMakeLists.txt  Main.cpp
tools/putty/: License.txt
